# local-rag

./: pyproject.toml
src/: main.py  tools.py
src/rag/: chunker.py  embedder.py  models.py  pipeline.py  vector_store.py
src/rag/parsers/: __init__.py  _base.py  markdown.py  pdf.py  plain_text.py  registry.py
