[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-rag"
version = "0.1.0"
description = "mcp server for performing RAG locally"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "markitdown",
    "markitdown-pdf-pages @ file:///Users/sc/dev/tractebel-gpt/packages/backend/sfn/document-ingestion/markdown-parser",
    "langchain-text-splitters",
    "sentence-transformers",
    "faiss-cpu",
]